[metadata]
name = chain gang
version = 1.0.0
author = Matt <3
author_email = matt@worldshadowgovernment.com
url = https://github.com/whatever/chain_gang
description = wip
long_description = file: README.md
long_description_content_type = text/markdown
keywords = x_x
license = UNLICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: UNLICENSE

[options]
package_dir =
  = src
packages = find:
install_requires =
  beautifulsoup4 >= 4.12.3 
  emoji >= 2.10.1 
  requests >= 2.31.0 
  selenium >= 4.17.2

[options.packages.find]
where = src
exclude =
  examples*
  tools*
  docs*
  x_x.tests*

[options.entry_points]
console_scripts = 
  chain_gang = chain_gang.cli:main

[options.package_data]
* = README.md

[options.extras_require]
dev =
  pyright >= 1.1.0
  pytest >= 7.0.0
  flake8 >= 7.0.0

[flake8]
max-line-length = 120

